Adding EnvModelResponse
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>