@@ -17,7 +17,6 @@ import io.aiven.klaw.error.KlawException;
 import io.aiven.klaw.error.KlawValidationException;
 import io.aiven.klaw.helpers.HandleDbRequests;
 import io.aiven.klaw.model.ApiResponse;
-import io.aiven.klaw.model.EnvModel;
 import io.aiven.klaw.model.KafkaSupportedProtocol;
 import io.aiven.klaw.model.KwClustersModel;
 import io.aiven.klaw.model.KwTenantModel;
@@ -28,6 +27,8 @@ import io.aiven.klaw.model.enums.KafkaClustersType;
 import io.aiven.klaw.model.enums.KafkaFlavors;
 import io.aiven.klaw.model.enums.MetadataOperationType;
 import io.aiven.klaw.model.enums.PermissionType;
+import io.aiven.klaw.model.requests.EnvModel;
+import io.aiven.klaw.model.response.EnvModelResponse;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -99,7 +100,7 @@ public class EnvsClustersTenantsControllerService {
     this.mailService = mailService;
   }
 
-  public synchronized EnvModel getEnvDetails(String envSelected, String clusterType) {
+  public synchronized EnvModelResponse getEnvDetails(String envSelected, String clusterType) {
     String userName = getUserName();
     log.debug("getEnvDetails {}", envSelected);
     int tenantId = commonUtilsService.getTenantId(userName);
@@ -117,7 +118,7 @@ public class EnvsClustersTenantsControllerService {
     }
 
     if (env != null) {
-      EnvModel envModel = new EnvModel();
+      EnvModelResponse envModel = new EnvModelResponse();
       copyProperties(env, envModel);
       envModel.setClusterName(
           manageDatabase
@@ -133,7 +134,7 @@ public class EnvsClustersTenantsControllerService {
     return null;
   }
 
-  private void extractKwEnvParameters(EnvModel env) {
+  private void extractKwEnvParameters(EnvModelResponse env) {
     String defPartns = "",
         defMaxPartns = "",
         defaultRf = "",
@@ -313,8 +314,8 @@ public class EnvsClustersTenantsControllerService {
 
     Map<String, String> hMap;
     List<Map<String, String>> envsOnly = new ArrayList<>();
-    List<EnvModel> envList = getKafkaEnvs();
-    for (EnvModel env : envList) {
+    List<EnvModelResponse> envList = getKafkaEnvs();
+    for (EnvModelResponse env : envList) {
       hMap = new HashMap<>();
       hMap.put("id", env.getId());
       String baseClusterDropDownStr = " (Base Sync cluster)";
@@ -330,7 +331,7 @@ public class EnvsClustersTenantsControllerService {
     return envsOnly;
   }
 
-  public List<EnvModel> getEnvsForRequestTopicsCluster() {
+  public List<EnvModelResponse> getEnvsForRequestTopicsCluster() {
     int tenantId = getUserDetails(getUserName()).getTenantId();
 
     String requestTopicsEnvs = mailService.getEnvProperty(tenantId, "REQUEST_TOPICS_OF_ENVS");
@@ -340,7 +341,7 @@ public class EnvsClustersTenantsControllerService {
     String orderOfEnvs = mailService.getEnvProperty(tenantId, "ORDER_OF_ENVS");
     String[] reqTopicsEnvs = requestTopicsEnvs.split(",");
     List<Env> listEnvs = manageDatabase.getKafkaEnvList(tenantId);
-    List<EnvModel> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA, tenantId);
+    List<EnvModelResponse> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA, tenantId);
 
     envModelList = filterEnvironmentModelList(reqTopicsEnvs, envModelList);
     if (orderOfEnvs == null) {
@@ -350,15 +351,15 @@ public class EnvsClustersTenantsControllerService {
     return envModelList;
   }
 
-  public List<EnvModel> getEnvsForRequestTopicsClusterFiltered() {
+  public List<EnvModelResponse> getEnvsForRequestTopicsClusterFiltered() {
     return getKafkaEnvs();
   }
 
-  public List<EnvModel> getKafkaEnvs() {
+  public List<EnvModelResponse> getKafkaEnvs() {
     int tenantId = getUserDetails(getUserName()).getTenantId();
     String orderOfEnvs = mailService.getEnvProperty(tenantId, "ORDER_OF_ENVS");
     List<Env> listEnvs = manageDatabase.getKafkaEnvList(tenantId);
-    List<EnvModel> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA, tenantId);
+    List<EnvModelResponse> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA, tenantId);
     envModelList.forEach(
         envModel ->
             envModel.setTenantName(manageDatabase.getTenantMap().get(envModel.getTenantId())));
@@ -380,11 +381,12 @@ public class EnvsClustersTenantsControllerService {
     return envModelList;
   }
 
-  public List<EnvModel> getConnectorEnvs() {
+  public List<EnvModelResponse> getConnectorEnvs() {
     int tenantId = getUserDetails(getUserName()).getTenantId();
     String orderOfEnvs = mailService.getEnvProperty(tenantId, "ORDER_OF_ENVS");
     List<Env> listEnvs = manageDatabase.getKafkaConnectEnvList(tenantId);
-    List<EnvModel> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA_CONNECT, tenantId);
+    List<EnvModelResponse> envModelList =
+        getEnvModels(listEnvs, KafkaClustersType.KAFKA_CONNECT, tenantId);
 
     envModelList.forEach(
         envModel ->
@@ -414,8 +416,9 @@ public class EnvsClustersTenantsControllerService {
     return allTenantsEnvModelsUpdated;
   }
 
-  public List<EnvModel> getEnvsPaginated(String envId, String pageNo, String searchEnvParam) {
-    List<EnvModel> envListMap = getKafkaEnvs();
+  public List<EnvModelResponse> getEnvsPaginated(
+      String envId, String pageNo, String searchEnvParam) {
+    List<EnvModelResponse> envListMap = getKafkaEnvs();
     if (envId != null && !envId.equals("")) {
       envListMap =
           envListMap.stream()
@@ -424,21 +427,21 @@ public class EnvsClustersTenantsControllerService {
     }
 
     if (searchEnvParam != null && !searchEnvParam.equals("")) {
-      List<EnvModel> envListMap1 =
+      List<EnvModelResponse> envListMap1 =
           envListMap.stream()
               .filter(env -> env.getName().toLowerCase().contains(searchEnvParam.toLowerCase()))
               .collect(Collectors.toList());
-      List<EnvModel> envListMap2 =
+      List<EnvModelResponse> envListMap2 =
           envListMap.stream()
               .filter(
                   env -> env.getClusterName().toLowerCase().contains(searchEnvParam.toLowerCase()))
-              .collect(Collectors.toList());
-      List<EnvModel> envListMap3 =
+              .toList();
+      List<EnvModelResponse> envListMap3 =
           envListMap.stream()
               .filter(
                   env -> env.getOtherParams().toLowerCase().contains(searchEnvParam.toLowerCase()))
-              .collect(Collectors.toList());
-      List<EnvModel> envListMap4 =
+              .toList();
+      List<EnvModelResponse> envListMap4 =
           envListMap.stream()
               .filter(
                   env ->
@@ -447,7 +450,7 @@ public class EnvsClustersTenantsControllerService {
                           .get(env.getTenantId())
                           .toLowerCase()
                           .contains(searchEnvParam.toLowerCase()))
-              .collect(Collectors.toList());
+              .toList();
       envListMap1.addAll(envListMap2);
       envListMap1.addAll(envListMap3);
       envListMap1.addAll(envListMap4);
@@ -458,15 +461,16 @@ public class EnvsClustersTenantsControllerService {
               .collect(
                   Collectors.collectingAndThen(
                       Collectors.toCollection(
-                          () -> new TreeSet<>(Comparator.comparing(EnvModel::getId))),
+                          () -> new TreeSet<>(Comparator.comparing(EnvModelResponse::getId))),
                       ArrayList::new));
     }
 
     return getEnvModelsPaginated(pageNo, envListMap);
   }
 
-  private List<EnvModel> getEnvModelsPaginated(String pageNo, List<EnvModel> envListMap) {
-    List<EnvModel> envListMapUpdated = new ArrayList<>();
+  private List<EnvModelResponse> getEnvModelsPaginated(
+      String pageNo, List<EnvModelResponse> envListMap) {
+    List<EnvModelResponse> envListMapUpdated = new ArrayList<>();
     int totalRecs = envListMap.size();
     int recsPerPage = 10;
 
@@ -480,7 +484,7 @@ public class EnvsClustersTenantsControllerService {
     for (int i = 0; i < totalRecs; i++) {
 
       if (i >= startVar && i < lastVar) {
-        EnvModel mp = envListMap.get(i);
+        EnvModelResponse mp = envListMap.get(i);
 
         mp.setTotalNoPages(totalPages + "");
         List<String> numList = new ArrayList<>();
@@ -494,15 +498,15 @@ public class EnvsClustersTenantsControllerService {
     return envListMapUpdated;
   }
 
-  private List<EnvModel> getEnvModels(
+  private List<EnvModelResponse> getEnvModels(
       List<Env> listEnvs, KafkaClustersType clusterType, int tenantId) {
-    List<EnvModel> envModelList = new ArrayList<>();
-    EnvModel envModel;
+    List<EnvModelResponse> envModelList = new ArrayList<>();
+    EnvModelResponse envModel;
     KwClusters kwCluster;
     for (Env listEnv : listEnvs) {
       kwCluster = manageDatabase.getClusters(clusterType, tenantId).get(listEnv.getClusterId());
       if (kwCluster != null) {
-        envModel = new EnvModel();
+        envModel = new EnvModelResponse();
         copyProperties(listEnv, envModel);
         envModel.setClusterName(
             manageDatabase
@@ -523,11 +527,11 @@ public class EnvsClustersTenantsControllerService {
         .get(targetEnv);
   }
 
-  public List<EnvModel> getSchemaRegEnvs() {
+  public List<EnvModelResponse> getSchemaRegEnvs() {
     int tenantId = getUserDetails(getUserName()).getTenantId();
     List<Env> listEnvs = manageDatabase.getSchemaRegEnvList(tenantId);
 
-    List<EnvModel> envModelList =
+    List<EnvModelResponse> envModelList =
         getEnvModels(listEnvs, KafkaClustersType.SCHEMA_REGISTRY, tenantId);
 
     envModelList.forEach(
@@ -550,7 +554,7 @@ public class EnvsClustersTenantsControllerService {
     return envModelList;
   }
 
-  public List<EnvModel> getEnvsForSchemaRequests() {
+  public List<EnvModelResponse> getEnvsForSchemaRequests() {
     int tenantId = getUserDetails(getUserName()).getTenantId();
 
     String requestSchemasEnvs = mailService.getEnvProperty(tenantId, "REQUEST_SCHEMA_OF_ENVS");
@@ -560,7 +564,7 @@ public class EnvsClustersTenantsControllerService {
     String orderOfEnvs = mailService.getEnvProperty(tenantId, "ORDER_OF_SCHEMA_ENVS");
     String[] reqSchemaEnvs = requestSchemasEnvs.split(",");
     List<Env> listEnvs = manageDatabase.getSchemaRegEnvList(tenantId);
-    List<EnvModel> envModelList =
+    List<EnvModelResponse> envModelList =
         getEnvModels(listEnvs, KafkaClustersType.SCHEMA_REGISTRY, tenantId);
     log.debug("orderOfEnvs {}, RequestForSchemas {}, ", orderOfEnvs, reqSchemaEnvs);
     envModelList = filterEnvironmentModelList(reqSchemaEnvs, envModelList);
@@ -571,7 +575,8 @@ public class EnvsClustersTenantsControllerService {
     return envModelList;
   }
 
-  private List<EnvModel> filterEnvironmentModelList(String[] reqEnvs, List<EnvModel> envModelList) {
+  private List<EnvModelResponse> filterEnvironmentModelList(
+      String[] reqEnvs, List<EnvModelResponse> envModelList) {
     envModelList =
         envModelList.stream()
             .filter(
@@ -589,7 +594,7 @@ public class EnvsClustersTenantsControllerService {
     return envModelList;
   }
 
-  public List<EnvModel> getKafkaConnectEnvs() {
+  public List<EnvModelResponse> getKafkaConnectEnvs() {
     String userName = getUserName();
     int tenantId = getUserDetails(userName).getTenantId();
     List<Env> listEnvs = manageDatabase.getKafkaConnectEnvList(tenantId);
@@ -603,7 +608,8 @@ public class EnvsClustersTenantsControllerService {
               .collect(Collectors.toList());
     }
 
-    List<EnvModel> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA_CONNECT, tenantId);
+    List<EnvModelResponse> envModelList =
+        getEnvModels(listEnvs, KafkaClustersType.KAFKA_CONNECT, tenantId);
 
     envModelList.forEach(
         envModel ->
